--- a/sponge_bob_front_end/index.html
+++ b/sponge_bob_front_end/index.html
@@ -8,8 +8,10 @@
     <title>Document</title>
 </head>
 <body>
+    
+    <script src="src/runnerGame.js"></script>
     <script src="src/index.js"></script>
-    <script src="src/game_area.js"></script>
+    
 
 
     <canvas></canvas>
