--- a/sponge_bob_front_end/index.html
+++ b/sponge_bob_front_end/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Slackey" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
-    <script src="src/runnerGame.js"></script>
     <script src="src/index.js"></script>
     
 
