--- a/sponge_bob_front_end/index.html
+++ b/sponge_bob_front_end/index.html
@@ -5,12 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Slackey" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+
+<ul>
+  <li><a class="active" id='title' href="#Home">RuthGabelodeon</a></li>
+  <li class="toolbar"><a href="#Shows">Shows</a></li>
+  <li class="toolbar"><a href="#Games">Other Games</a></li>
+  <li class="toolbar"><a href="#Tv">Tv Schedule</a></li>
+</ul>
     <script src="src/index.js"></script>
-    
+
 
 
     <canvas></canvas>
