additional css updates

--- a/sponge_bob_front_end/index.html
+++ b/sponge_bob_front_end/index.html
@@ -11,12 +11,13 @@
 </head>
 <body>
 
-<ul>
-  <li><a class="active" id='title' href="#Home">RuthGabelodeon</a></li>
-  <li class="toolbar"><a href="#Shows">Shows</a></li>
-  <li class="toolbar"><a href="#Games">Other Games</a></li>
-  <li class="toolbar"><a href="#Tv">Tv Schedule</a></li>
-</ul>
+      <ul>
+        <li><a class="active" id='title'>RuthGabelodeon</a></li>
+        <li class="toolbar"><a href="https://www.nick.com/shows/spongebob-squarepants" target="_blank">Shows</a></li>
+        <li class="toolbar"><a href="https://www.nick.com/games/" target="_blank" >Other Games</a></li>
+        <li class="toolbar"><a href="https://www.nick.com/tv-schedule" target="_blank" >Tv Schedule</a></li>
+      </ul>
+
     <script src="src/index.js"></script>
 
 
