Added the button functionality

--- a/sponge_bob_front_end/index.html
+++ b/sponge_bob_front_end/index.html
@@ -10,6 +10,13 @@
     <title>Document</title>
 </head>
 <body>
+        <div id = "you_lost"> 
+            <h1 id='lost_text'>You Lost!</h1>
+            <img class='lost_pic' src ='assets/images/you_lost.gif'>
+            <img class='lost_pic' src='assets/images/-plankton-sticker-spongebob-squarepants-39750396-500-500.gif'>
+            
+            <button id='button'> Play Again? </button>
+        </div>
 
       <ul>
         <li><a class="active" id='title'>RuthGabelodeon</a></li>
