Centered the score/username form

--- a/sponge_bob_front_end/index.html
+++ b/sponge_bob_front_end/index.html
@@ -10,21 +10,6 @@
     <title>Document</title>
 </head>
 <body>
-        <div id = "you_lost"> 
-            <div>
-            <h1 id='lost_text'>You Lost!</h1>
-            <img class='lost_pic' src ='assets/images/you_lost.gif'>
-            <img class='lost_pic' src='assets/images/-plankton-sticker-spongebob-squarepants-39750396-500-500.gif'>
-            <form action="/" method="post">
-                <label for="user" class='lost_text'>Type your name:</label>
-                <input type="text" name="userName" id="user_name">
-                <input type="submit" value="Submit">
-            </form>
-            <button id='button'> Play Again? </button>
-            </div>
-
-        </div>
-
       <ul>
         <li><a class="active" id='title'>RuthGabelodeon</a></li>
         <li class="toolbar"><a href="https://www.nick.com/shows/spongebob-squarepants" target="_blank">Shows</a></li>
@@ -33,12 +18,39 @@
         <li class="toolbar right" ><a id ='leaderBoard'>LeaderBoard</a></li>
       </ul>
 
-    <script src="src/index.js"></script>
+      <center><div id='runner_Game'>
+          <img id='imgTitle'src="assets/images/SpongeBob_SquarePants_logo.svg.png">
+          <h2 class='runner'>Runner Game<h2>
+              <p class='directions'>Press the <b>space bar</b> to make SpongeBob jump!</p>
+        </div></center>
 
+    <center><div id = "you_lost"> 
+            <div>
+                <h1 id='lost_text'>You Lost!</h1>
+                <img class='lost_pic' src ='assets/images/you_lost.gif'>
+                <img class='lost_pic' src='assets/images/-plankton-sticker-spongebob-squarepants-39750396-500-500.gif'>
+                <form action="/" method="post">
+                    <label for="user" class='lost_text'>Type your name:</label>
+                    <input type="text" name="userName" id="user_name">
+                    <input id = 'button' type="submit" value="Submit">
+                </form>
+            </div>
+
+    </div></center>
 
 
     <canvas></canvas>
 
+    <div id="myModal" class="modal">
+            <div class="modal-content" id='modalContent'>
+                <span class="close">X</span>
+                <table style="width:100%">
+                    <h2> Top 10</h2>
+  
+                </table>
+        </div>
+    </div>
 
+    <script src="src/index.js"></script>
 </body>
 </html>
