Created a play button and hid canvas

--- a/sponge_bob_front_end/index.html
+++ b/sponge_bob_front_end/index.html
@@ -32,11 +32,13 @@
                 <form action="/" method="post">
                     <label for="user" class='lost_text'>Type your name:</label>
                     <input type="text" name="userName" id="user_name">
-                    <input id = 'button' type="submit" value="Submit">
+                    <input type="submit" value="Submit">
                 </form>
             </div>
 
     </div></center>
+
+    <center><button id = 'button'> PLAY IT!</button></center>
 
 
     <canvas></canvas>
