Change the button's colors

--- a/sponge_bob_front_end/index.html
+++ b/sponge_bob_front_end/index.html
@@ -15,7 +15,7 @@
         <li class="toolbar"><a href="https://www.nick.com/shows/spongebob-squarepants" target="_blank">Shows</a></li>
         <li class="toolbar"><a href="https://www.nick.com/games/" target="_blank" >Other Games</a></li>
         <li class="toolbar"><a href="https://www.nick.com/tv-schedule" target="_blank" >Tv Schedule</a></li>
-        <li class="toolbar right" ><a id ='leaderBoard'>LeaderBoard</a></li>
+        <li class="toolbar right" ><a id ='leaderBoard'>Leaderboard</a></li>
       </ul>
 
       <center><div id='runner_Game'>
